fix(responsive): improve mobile layout spacing, stats cards & logo cropping

--- a/src/index.css
+++ b/src/index.css
@@ -474,7 +474,7 @@ elevenlabs-convai {
   .nav-logo-container .nav-logo-img {
     height: 100px !important;
     width: 180px !important;
-    top: -13px !important;
+    top: -18px !important;
     left: 0px !important;
   }
 
@@ -618,7 +618,7 @@ elevenlabs-convai {
   .nav-logo-container .nav-logo-img {
     height: 87px !important;
     width: 155px !important;
-    top: -11px !important;
+    top: -16px !important;
     left: 0px !important;
   }
 
